svelte/src/routes/app.css
/* ... */
#mainViewTimerNotificationContainer, #deleteNotificationContent {
  display: flex;
  flex: 1 1 0;
  flex-direction: column;
  padding: 10px;
}

#deleteNotificationButtons {
  display: flex;
  flex-direction: row;
  max-height: 30px;
  height: 100%;
  gap: 10px;
}

#mainViewTimerMessageContainer {
  padding-right: 10px;
}

#mainViewTimerNotificationContainer p, #deleteNotificationContent p {
  flex: 1 1 0;
  overflow-y: auto;
  text-align: left;
  white-space: pre-wrap;
  word-break: break-word;
  word-wrap: break-word;
  margin: 0;
}

#mainViewTimerNotificationContainer button, #deleteNotificationButtons button {
  background-color: #222;
  color: #f6f6f6;
  font-size: 16px;
  border: none;
  border-radius: 6px;
  max-width: 50px;
  width: 100%;
  max-height: 26px;
  height: 100%;
  font-size: 14px;
  margin-top: 4px;
  padding: 2px 10px;
  box-shadow: 0 4px 12px rgba(0,0,0,0.8);
  transition: transform 0.2s, box-shadow 0.2s;
}

#deleteNotificationButtons button {
  max-width: 70px;
}

#mainViewTimerNotificationContainer button:hover, #deleteNotificationButtons button:hover {
  cursor: pointer;
  background: #333;
  transform: translateY(-2px);
  box-shadow: 0 8px 24px rgba(0,0,0,1);
}

.mainViewTimerSpacer {
  display: flex;
  flex: 1;
  border-bottom: 1px solid #444;
}

